--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V12.0.6.0.QFJCNXM/miui_DAVINCI_V12.0.6.0.QFJCNXM_5ca52304f9_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/V12.2.2.0.RJACNXM/miui_CMI_V12.2.2.0.RJACNXM_07a38c8116_11.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
