--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V12.0.2.0.QJACNXM/miui_CMI_V12.0.2.0.QJACNXM_abee2ef38f_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/20.3.26/miui_UMI_20.3.26_35d388f3fb_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
@@ -61,7 +61,7 @@ jobs:
        - name: Upload GSI to BitSend
          run: |
               curl -sL https://git.io/file-transfer | sh
-              ./transfer gof final/GSI.zip
+              ./transfer wet final/GSI.zip
 
          
             
