--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/20.3.26/miui_UMI_20.3.26_35d388f3fb_10.0.zip
+  ROM_URL: https://hugeota.d.miui.com/21.1.29/miui_VENUS_21.1.29_7dad5d1fd3_11.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
