--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://hugeota.d.miui.com/21.1.29/miui_VENUS_21.1.29_7dad5d1fd3_11.0.zip
-  ROM_NAME: Generic
+  ROM_URL: http://download.h2os.com/OnePlus5/MP/OnePlus5Hydrogen_23_OTA_065_all_2012030353_e8c692aa5e0c45ca.zip
+  ROM_NAME: OxygenOS
   TZ: Asia/Shanghai
 
 jobs:
